--- a/ApnaCollege/styles.css
+++ b/ApnaCollege/styles.css
@@ -41,6 +41,7 @@ button:hover
 }
 form
 { 
+    transform:rotateY(15deg);
     transition-duration: 0.7s;
     border-radius: 16px;
     color:rgb(0, 255, 238);
@@ -108,6 +109,7 @@ ol li:hover
 #image
 {
     transition-duration: 0.8s;
+    animation:border 10s linear 0s infinite normal;
 }
 
 #image:hover
@@ -146,17 +148,19 @@ font-weight: bold;
 
 input
 {
+    text-align:center ;
     margin:0px 2px 0px 2px;
     margin-bottom:24px;
     display: block;
-    transition-duration: 0.4s;
+    transition-duration: 0.5s;
 }
 input:focus-visible
 {
+    text-align:start;
     outline:none;
     border: 2px rgb(168, 61, 255) solid;
     border-radius: 8px;
-    transition-duration: 0.4s;
+    transition-duration: 0.5s;
     transform: scale(1.03);
     background-color: rgb(215, 215, 215);
 }
@@ -185,7 +189,9 @@ input[type="checkbox"]
 
 #footer
 {
-
+    background: linear-gradient(235deg,#000000,#3e3e3e,#3d3d76,#5e2bed);
+  background-size: 240% 240%;
+  animation: gradient-animation 12s ease infinite;
     padding-top:64px;
     padding-bottom:64px;
     margin-top:64px;
@@ -212,7 +218,9 @@ input[type="checkbox"]
 
 #container
 {
-    animation: boxshadow 2s linear 0s infinite alternate;
+  background: linear-gradient(235deg,#000000,#3a3a5f,#2f2fad,#1010d0);
+  background-size: 240% 240%;
+  animation: gradient-animation 6s ease infinite ;
     transition-duration: 1s;
     background-color:   rgb(25, 25, 25);
     height : 900px;
@@ -233,7 +241,8 @@ input[type="checkbox"]
 
 #books
 {
-    transition-duration:1s;
+    
+    transition-duration:0.8s;
     border-radius:2%;
     background-color: rgb(0, 0, 0);
     height:360px;
@@ -251,12 +260,13 @@ input[type="checkbox"]
 {
     border-radius:0px;
     background-color: rgb(10, 10, 10);
-    transition-duration: 1s;
+    transition-duration: 0.8s;
     transform:scale(1.05);
 }
 
 #book
 {
+    
     margin-bottom:16px;
     height:260px;
     width:180px;
@@ -265,6 +275,22 @@ input[type="checkbox"]
 body p, body a
 {
     margin-left: 64px;
+}
+
+#load
+{
+    
+    display:flex;
+    justify-content: center;
+}
+#loader
+{
+  box-shadow: 4px 4px 8px purple;
+ 
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  animation: spin 2s linear infinite;
 }
 
 @keyframes boxshadow
@@ -280,3 +306,26 @@ body p, body a
     }
 }
 
+@keyframes spin
+{
+    0%
+    {
+        transform:rotate(0deg);
+    }
+    100%
+    {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
