--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -5,6 +5,11 @@
 
 }
 
+body
+{
+    height: 100vh;
+}
+
 header
 {
     margin-top:1%;
@@ -325,16 +330,26 @@ header
     margin-bottom:6%;
 }
 
+#profiles
+{
+    height: 100%;
+}
+
 #profilesdiv
 {
     margin-left:12%;
     margin-right:12%;
     margin-bottom:8%;
+    height:80%;
+
 }
 
 #profilesindicont
 {
-    background-color: rgb(190, 190, 190);
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: space-around;
     height:200px;
     width:200px;
     border-radius:16%;
@@ -342,14 +357,64 @@ header
 
 #profilescontainer
 {
+    transition-duration:0.8s;
+    height: 90%;
+    border-radius: 24px;
+    background-color: rgba(111, 0, 255,0.06);
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     place-items:center;
-    row-gap:24%;
+}
+#profilescontainer:hover
+{
+    transform:scale(1.015);
+    transition-duration:0.8s;
+    border-radius: 56px;
+    background-color: rgba(111, 0, 255,0.12);
+}
+
+#profilesindicontimg
+{
+    height: 64%;
+}
+
+#profilesindicontimg img
+{
+    transition-duration:0.6s;
+    border-radius:20%;
+    height: 100%;
+    opacity:0.75;
+}
+
+#profilesindicontimg img:hover
+{
+    transition-duration:0.6s;
+    transform: scale(1.05);
+    opacity:1;
+}
+
+#profilesindicontlink a
+{
+    font-size:120%;
+    color:rgb(31, 31, 31);
+    text-decoration: none;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#profilesindicontlink a:hover
+{
+    color:rgb(111, 0, 255);
 }
 
 @media (min-width:200px) and (max-width :900px) 
 {
+    #profilesindicont
+    {
+    height:150px;
+    width:150px;
+    }
     #expdesc #exp1
     {
         display: flex;
@@ -364,6 +429,10 @@ header
 
 @media (min-width:200px) and (max-width :650px) 
 {
+    #profilescontainer
+    {
+    grid-template-columns: 1fr 1fr;
+    }
     #imgsection
     {
         display:none;
