--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -408,6 +408,23 @@ header
     color:rgb(111, 0, 255);
 }
 
+#skillssection
+{
+    margin-left:12%;
+    margin-right:12%;
+    margin-bottom:12%;
+}
+
+#skillssectionheading
+{
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-size:240%;
+    margin-bottom:6%;
+}
+
 @media (min-width:200px) and (max-width :900px) 
 {
     #profilesindicont
