--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -76,6 +76,9 @@ header
 }
 #imgsection img
 {
+    animation-duration: 0.8s;
+    animation-name: animate-pop;
+    animation-timing-function: cubic-bezier(.26, .53, .74, 1.48);
     transition-duration: 0.8s;
     height: 100%;
     border-radius:50%;
@@ -109,6 +112,7 @@ header
 
 #firstsection #contactsec #text1, #firstsection #contactsec #text2
 {
+  color:#232323;
   font-size: 120%;
   margin-bottom:4%;
   font-family: "Lato", sans-serif;
@@ -119,6 +123,7 @@ header
 #about
 {
     margin:12%;
+    margin-bottom: 8%;
 }
 
 #about #aboutme
@@ -151,8 +156,7 @@ header
 
 #expdiv
 {
-    background-color: rgb(246, 246, 246);
-    background: linear-gradient(180deg,rgb(246, 246, 246),rgb(246, 246, 246),rgb(206, 199, 233));
+    background: linear-gradient(180deg,rgb(246, 246, 246),rgb(246, 246, 246),rgb(206, 199, 233),rgb(186, 175, 229));
     background-size: 200% 200%;
     animation: gradient-animation 4s ease infinite;
 }
@@ -238,7 +242,7 @@ header
 #edu
 {
     margin-top:8%;
-    margin-bottom:8%;
+    margin-bottom:6%;
     margin-left:12%;
     margin-right:12%;
 }
@@ -251,22 +255,12 @@ header
 
 #rv
 {
-    transition-duration: 0.8s;
     display:flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 32px;
     width:1200px;
     height:320px;
-    background-color: rgb(246, 246, 246);
-}
 
-#rv:hover
-{
-    transition-duration: 0.8s;
-    transform: scale(1.01);
-    background-color: rgb(240, 240, 240);
-    box-shadow: 4px 4px 8px gray;
 }
 
 #headinfo
@@ -330,6 +324,72 @@ header
     margin-bottom:6%;
 }
 
+#projectdivouter
+{
+    background: linear-gradient(110deg,black,rgb(0, 0, 0),rgb(60, 0, 255));
+    background-size: 160% 160%;
+    animation: gradient-animation 12s ease-in infinite;
+    padding-top:2%;
+    padding-bottom: 2%;
+    margin-bottom: 6%;
+}
+
+#projectdiv
+{
+    margin: 6% 12%;
+}
+
+#projectdivheading
+{
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-size:240%;
+    margin-bottom: 4%;
+    color: white;
+}
+
+#projectdivheadingcontainer
+{
+    transition-duration: 0.6s;
+    padding:8% 2%;
+    background-color: #040404;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom:8%;
+    border-radius: 32px;
+}
+
+#projectdivheadingcontainer:hover
+{
+    transition-duration: 0.6s;
+    transform: scale(1.015);
+    background-color: #0c0c0c;
+    border-radius: 40px;
+}
+
+#projectheading
+{
+    width:50%;
+    font-family: "Roboto", sans-serif;
+    align-items: justify;
+    font-size:130%;
+    color:rgb(111, 0, 255);
+}
+
+#projectinformation
+{
+    width: 33%;
+    font-size:105%;
+    color: #ffffff;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: justify;
+}
+
 #profiles
 {
     height: 100%;
@@ -337,11 +397,11 @@ header
 
 #profilesdiv
 {
+    margin-top: 8%;
     margin-left:12%;
     margin-right:12%;
-    margin-bottom:8%;
+    margin-bottom:12%;
     height:80%;
-
 }
 
 #profilesindicont
@@ -408,17 +468,24 @@ header
     color:rgb(111, 0, 255);
 }
 
+#skillssectionouterdiv
+{
+    background-color: rgb(246, 240, 255);
+}
+
 #skillssectiondiv
 {
+    padding-top:6%;
     margin-left:12%;
     margin-right:12%;
-    margin-bottom:12%;
+    margin-bottom:6%;
+    padding-bottom:6%;
 }
 
 #skillssection
 {
     display:flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 #skillssectionheading
@@ -429,6 +496,52 @@ header
     font-style: normal;
     font-size:240%;
     margin-bottom:4%;
+}
+
+#skillssectionlogo
+{
+    opacity: 0.8;
+    display: flex;
+    justify-content: center;
+    color:rgb(111, 0, 255);
+    font-size: 4rem;
+    margin-bottom: 5rem;
+    font-weight: 500;
+    transition-duration: 0.6s;
+}
+
+#skillssectionlogo:hover
+{
+    opacity: 1;
+    transform: scale(1.1) rotateZ(-8deg);
+    transition-duration: 0.6s;
+}
+
+#skillssectionskills
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 3rem;
+}
+
+.skillsectionskill
+{
+    transition-duration: 0.6s;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color:#232323;
+    font-size: 1.25rem;
+    margin-bottom:2rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid rgba(66, 161, 255, 0.627);
+}
+
+.skillsectionskill:hover
+{
+    transition-duration: 0.6s;
+    color:#232323;
+    transform: translateY(-4px) scale(1.05);
 }
 
 @media (min-width:200px) and (max-width :900px) 
@@ -444,7 +557,7 @@ header
         flex-direction:row;
         flex-wrap: wrap;
     }
-    #anim
+    #anim,#rvimg
     {
         display:none;
     }
@@ -473,3 +586,16 @@ header
       background-position: 0% 50%;
     }
   }
+
+  @keyframes animate-pop {
+    0% {
+      opacity: 0;
+      transform: scale(0.5, 0.5);
+    }
+  
+    100% {
+      opacity: 1;
+      transform: scale(1, 1);
+    }
+  }
+  
